# automixer

./: .gitignore  README.md  default_parameter_output.py  environment.yml  inference.py  init.sh  main.py  main_train.py  output.py  pyproject.toml  train.py
MERT/: create_data.py
MERT/mfcc_data/: valid_0_1.len
MERT/scripts/: MERT_demo_inference.py
data/: build_pairs.py  dataset.py  train.tsv  valid.tsv
data/encodec_labels_train/: train.codec_0  train.codec_1  train.codec_2  train.codec_3  train.codec_4  train.codec_5  train.codec_6  train.codec_7
dsp/: dsp_engine.py  dsp_rules.py
models/: bpm_encoding.py  mert_encoder.py  pe.py  transformer_mixer.py
