[project]
name = "automixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=3.1.0",
    "deepspeed>=0.18.2",
    "encodec>=0.1.1",
    "fairscale>=0.4.13",
    "fairseq==0.12.2",
    "ffmpeg>=1.4",
    "librosa>=0.11.0",
    "nnaudio>=0.3.3",
    "npy-append-array>=0.9.19",
    "numpy<1.24",
    "packaging>=25.0",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "pydub>=0.25.1",
    "pysoundfile>=0.9.0.post1",
    "pytorch-extension>=0.2",
    "scikit-learn>=1.3.2",
    "setuptools>=75.3.2",
    "tensorboardx>=2.6.2.2",
    "torch==1.12.1",
    "torchaudio==0.12.1",
    "torchvision==0.13.1",
    "transformers>=4.46.3",
    "wandb>=0.23.0",
]
